--- a/Margherita.Ionic/src/app/app.scss
+++ b/Margherita.Ionic/src/app/app.scss
@@ -34,3 +34,24 @@ ion-content.backImage{
 .logo img{
     width: 120px;
 }
+
+.topo {
+    position: fixed;
+    width: 100%;
+    background: red;
+    height: 200px;
+    background: linear-gradient(to bottom, rgba(255,0,0,1) 0%, rgba(139,0,0,1) 100%);
+}
+.titulo {
+    position: relative;
+    color: white;
+}
+.titulo p {
+    float: left;
+    font-size: 2rem;
+    margin: 0px;
+    font-weight: bold;
+    margin-left: 15px;
+    margin-top: 15px;
+}
+
