--- a/Margherita.Ionic/src/pages/categoria/categoria.scss
+++ b/Margherita.Ionic/src/pages/categoria/categoria.scss
@@ -37,7 +37,7 @@ page-categoria {
         width: 100%;
         display: block;
         text-align: center;
-        color: white;
+        color:#FFD700;
         font-size: 2.1rem;
         font-weight: bold;
         margin: 0px;
