--- a/Margherita.Ionic/src/app/app.scss
+++ b/Margherita.Ionic/src/app/app.scss
@@ -1,40 +1,35 @@
-ion-content.backImage{
-        
-    background: url(/assets/imgs/fundo.jpg);
+
+ion-content.backImage {
+    background: url(../assets/imgs/fundo.jpg);
     background-size: cover;
 }
 
-.backImage .scroll-content{
-    background: rgba(189, 8 ,28, 0.6);
+.backImage .scroll-content {
+    background: rgba(189, 8, 28, 0.6);
 }
-   
 
-.list-transparent .item{
+.list-transparent .item {
     background: transparent !important;
 }
-
-.list.list-transparent  .item-input:last-child{
+.list.list-transparent  .item-input:last-child {
     border-bottom: none !important;
 }
 
-.logo{
+.logo {
     width: 100%;
     text-align: center;
-    margin-top:20%;
+    margin-top: 20%;
 }
-
-.logo span{
+.logo span {
     color: white;
     font-size: 1.8rem;
     text-align: center;
     display: block;
     font-weight: bold;
-}
-
-.logo img{
+ }
+.logo img {
     width: 120px;
 }
-
 .topo {
     position: fixed;
     width: 100%;
@@ -55,3 +50,43 @@ ion-content.backImage{
     margin-top: 15px;
 }
 
+.produtos {
+    margin-top: 60px;
+}
+.produtos .produto {
+   width: 80%;
+   background: white;
+   display: block;
+   position: relative;
+   margin: 0 auto;
+   margin-bottom: 15px;
+   border: 1px solid #E2DDDD;
+   box-shadow: 3px 3px 4px rgba(0,0,0, 0.2);
+   padding: 10px;
+   overflow: auto;        
+}
+.produtos .produto .titulo {
+   color: red;
+   font-size: 1.6rem;
+   margin-bottom: 4px;
+}
+.produtos .produto .descricao {
+   height: 50px;
+}
+.produtos .imagem {
+   float: left;
+   border: 1px solid #E2DDDD;
+   width: 79px;
+   height: 100px;
+   margin-right: 10px;
+   border-radius: 10px;
+   background-size: cover;
+   background-position: 50% 50%;
+}
+.produtos .produto .preco span {
+   font-weight: bold;
+   font-size: 1.3rem;
+}
+.produtos .produto .preco {
+   font-size: 2rem;
+}
