--- a/Margherita.Ionic/src/pages/carrinho/carrinho.scss
+++ b/Margherita.Ionic/src/pages/carrinho/carrinho.scss
@@ -40,4 +40,11 @@ page-carrinho {
         box-shadow: 0px 3px 6px rgba(0,0,0, 0.16);
     }
 
+    .produtos {
+        margin-top: 15px !important;        
+    }
+    .produtos .produto {
+        width: 90% !important;
+    }
+
 }
