--- a/Margherita.Ionic/src/pages/categoria/categoria.scss
+++ b/Margherita.Ionic/src/pages/categoria/categoria.scss
@@ -37,10 +37,12 @@ page-categoria {
         width: 100%;
         display: block;
         text-align: center;
-        color:#FFD700;
+       // color:#FFD700;
+       color:white;
         font-size: 2.1rem;
         font-weight: bold;
         margin: 0px;
         margin-bottom: 20px;
     }
+
 }
